Summary: | ASTERISK-29033: res_pjsip_session: Aggressively terminates session on failed re-INVITE | ||
Reporter: | Joshua C. Colp (jcolp) | Labels: | |
Date Opened: | 2020-08-18 04:36:01 | Date Closed: | 2020-08-25 13:23:23 |
Priority: | Minor | Regression? | No |
Status: | Closed/Complete | Components: | Resources/res_pjsip_session |
Versions: | 13.35.0 16.12.0 17.6.0 | Frequency of Occurrence | |
Related Issues: | |||
Environment: | Attachments: | ||
Description: | Right now when an outgoing re-INVITE fails we terminate the call except for a few slim responses. According to the RFC we should instead only terminate for a few slim responses. | ||
Comments: | By: Friendly Automation (friendly-automation) 2020-08-25 13:23:24.898-0500 Change 14760 merged by Friendly Automation: res_pjsip_session: Don't aggressively terminate on failed re-INVITE. [https://gerrit.asterisk.org/c/asterisk/+/14760|https://gerrit.asterisk.org/c/asterisk/+/14760] By: Friendly Automation (friendly-automation) 2020-08-25 13:25:51.875-0500 Change 14761 merged by Friendly Automation: res_pjsip_session: Don't aggressively terminate on failed re-INVITE. [https://gerrit.asterisk.org/c/asterisk/+/14761|https://gerrit.asterisk.org/c/asterisk/+/14761] By: Friendly Automation (friendly-automation) 2020-08-25 13:40:11.275-0500 Change 14734 merged by Kevin Harwell: res_pjsip_session: Don't aggressively terminate on failed re-INVITE. [https://gerrit.asterisk.org/c/asterisk/+/14734|https://gerrit.asterisk.org/c/asterisk/+/14734] By: Friendly Automation (friendly-automation) 2020-08-25 13:41:03 Change 14735 merged by Kevin Harwell: res_pjsip_session: Don't aggressively terminate on failed re-INVITE. [https://gerrit.asterisk.org/c/asterisk/+/14735|https://gerrit.asterisk.org/c/asterisk/+/14735] By: Friendly Automation (friendly-automation) 2020-08-25 13:41:29.221-0500 Change 14762 merged by Kevin Harwell: res_pjsip_session: Don't aggressively terminate on failed re-INVITE. [https://gerrit.asterisk.org/c/asterisk/+/14762|https://gerrit.asterisk.org/c/asterisk/+/14762] By: Friendly Automation (friendly-automation) 2020-08-25 15:55:55.287-0500 Change 14759 merged by Kevin Harwell: res_pjsip_session: Don't aggressively terminate on failed re-INVITE. [https://gerrit.asterisk.org/c/asterisk/+/14759|https://gerrit.asterisk.org/c/asterisk/+/14759] |